Change the subtitle to shoot for the moon!

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"metatype": "settings", "metadata": { "title": "Icarus: From Boyz II Men", "height": 800, "width": 600 } }
+{"metatype": "settings", "metadata": { "title": "Icarus: Shoot for the Moon", "height": 800, "width": 600 } }
