--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,14 +5,14 @@ repos:
   - id: end-of-file-fixer
   - id: trailing-whitespace
 - repo: https://github.com/pre-commit/mirrors-isort
-  rev: v4.3.21
+  rev: v5.6.4
   hooks:
   - id: isort
 - repo: https://github.com/psf/black
-  rev: 19.3b0
+  rev: 20.8b1
   hooks:
   - id: black
 - repo: https://gitlab.com/pycqa/flake8
-  rev: ''  # pick a git hash / tag to point to
+  rev: 3.8.4
   hooks:
   - id: flake8
