--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,9 @@ repos:
   hooks:
   - id: end-of-file-fixer
   - id: trailing-whitespace
+  - id: check-json
+  - id: pretty-format-json
+    args: ['--autofix']
 - repo: https://github.com/pre-commit/mirrors-isort
   rev: v5.6.4
   hooks:
