Load save file name/path from settings.json

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
   "metadata": {
     "height": 1024,
+    "save_file": "save_data.json",
     "title": "Icarus: Shoot for the Moon",
     "width": 768
   },
