--- a/.github/workflows/lintpr.yml
+++ b/.github/workflows/lintpr.yml
@@ -4,7 +4,10 @@ name: Lint Pull Requests
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
-on: [pull_request]
+on:
+  pull_request:
+    branches:
+    - main
 
 jobs:
   lint:
