Create equip scene, move player component somewhere more globally accessible, and create initial working save data implementation

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "metadata": {
     "height": 1280,
-    "save_file": "save_data.json",
+    "save_file": "icarus.json",
     "title": "Icarus: Shoot for the Moon",
     "width": 960
   },
