--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,8 @@
     "height": 1280,
     "jetBootsCost": 9999,
     "save_file": "icarus.json",
-    "title": "Icarus: Shoot for the Moon",
+    "subtitle": "Shoot for the Moon",
+    "title": "Icarus",
     "width": 960,
     "wingsCost": 2000
   },
